# pss-fleet-data-client

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.py  pyproject.toml  pytest.ini  requirements.txt  settings.yaml  setup.cfg  showcase.py
.github/workflows/: check-and-test.yml
src/: __init__.py  alliance.py  client.py  lookups.py  settings.py  tourney_data.py  typehints.py  user.py  utils.py
src/client/: __init__.py  client.py  utils.py
src/client/core/: __init__.py  exceptions.py  utils.py
src/client/model/: __init__.py  api.py  client.py  converters.py  exceptions.py  models.py
src/client/models/: api_models.py  client_models.py  converters.py
src/pss_fleet_data/: __init__.py  client.py  utils.py
src/pss_fleet_data/core/: __init__.py  config.py  enums.py  utils.py
src/pss_fleet_data/models/: __init__.py  api_models.py  client_models.py  converters.py
src/pss_fleet_data/utils/: __init__.py  convert.py  datetime.py  ensure.py  requests.py
tests/: conftest.py
tests/10_core/utils/: test_add_timezone_utc.py  test_convert_datetime_to_seconds.py  test_create_parameter_dict.py  test_decode_alliance_membership.py  test_encode_alliance_membership.py  test_get_from_to_date_from_timestamp.py  test_get_most_recent_timestamp.py  test_localize_to_utc.py  test_parse_datetime.py  test_remove_timezone.py  utils_test_cases.py
tests/10_core/utils/convert/: test_decode_alliance_membership.py  test_encode_alliance_membership.py
tests/10_core/utils/datetime/: test_convert_datetime_to_seconds.py  test_format_datetime.py  test_get_most_recent_timestamp.py
tests/10_core/utils/ensure/: ensure_test_cases.py  test_positive_float_or_int.py  test_str_.py  (+1 more)
tests/10_utils/: test_add_timezone_utc.py  test_convert_datetime_to_seconds.py  test_decode_alliance_membership.py  test_encode_alliance_membership.py  test_localize_to_utc.py  test_parse_datetime.py  test_remove_timezone.py
tests/20_model/converters/: conftest.py  test_collection_to_api.py  test_from_api.py  test_from_to_api.py  test_to_api.py  test_to_from_api.py  test_user_to_api.py
tests/20_models/converters/: conftest.py  test_from_api.py  test_from_response.py  test_from_to_api.py  test_to_api.py  test_to_from_api.py
tests/30_client/: client_test_cases.py  conftest.py  test_client_creation.py
tests/30_client/10_helper/: helper_test_cases.py  test__create_parameter_dict.py  test__delete_with_api_key.py  test__get_parameter_dict.py  test__post_with_api_key.py  test__raise_on_error.py
tests/30_client/20_routes/: conftest.py  routes_test_cases.py  test_cases.py  test_create_collection.py  test_delete_collection.py  test_get_alliance_from_collection.py  test_get_alliance_history.py  test_get_alliances_from_collection.py  test_get_collection.py  test_get_collection_by_timestamp.py  test_get_collections.py  test_get_most_recent_collection_by_timestamp.py  test_get_most_recent_collection_metadata_by_timestamp.py  test_get_top_100_users_from_collection.py  test_get_user_from_collection.py  test_get_user_history.py  test_get_users_from_collection.py  test_ping.py  test_update_collection.py  test_upload_collection.py
tests/30_client/responses/: http_200.py  http_201.py  http_204.py  http_409.py  http_415.py  http_500.py
tests/30_routes/: __init__.py  conftest.py  test_cases.py  test_create_collection.py  test_delete_collection.py  test_get_alliance_from_collection.py  test_get_alliance_history.py  test_get_alliances_from_collection.py  test_get_collection.py  test_get_collections.py  test_get_top_100_users_from_collection.py  test_get_user_from_collection.py  test_get_user_history.py  test_get_users_from_collection.py
tests/30_routes/cassettes/: test_get_422_from_date_not_a_valid_date.yaml  test_get_422_interval_invalid.yaml
tests/30_routes/mock_responses/: __init__.py  allianceHistory_allianceId.py  collections.py  collections_collectionId.py  collections_collectionId_alliances.py  empty_response.py  get_collection.py  get_collections.py  ok.py  server_error.py
tests/30_routes/responses/: __init__.py  http_200.py  http_201.py  http_204.py  http_404.py  http_409.py  http_415.py  http_422.py  http_500.py
tests/cassettes/: test_get_422_from_date_after_to_date.yaml  test_get_422_from_date_not_a_valid_date.yaml  test_get_422_from_date_random_string.yaml  test_get_422_from_date_too_early.yaml  test_get_422_interval_invalid.yaml  test_get_422_skip_negative.yaml  test_get_422_take_negative.yaml  test_get_422_take_too_big.yaml  test_get_422_to_date_not_a_valid_date.yaml  test_get_422_to_date_random_string.yaml  test_get_422_to_date_too_early.yaml
tests/files/: upload_test_data_schema_9.json
tests/fixtures/: __init__.py  api_asserts.py  api_objects.py  client_asserts.py  client_objects.py  factory.py
(+24 files in other folders)
