[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pss-fleet-data-client"
description = "Client for the PSS Fleet Data module"
requires-python = "3.11"
dynamic = ["version"]
license = {text = "MIT"}
authors = [
    {name = "The worst.", email = "The worst. <theworstpss@gmail.com>"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = [
    "pssapi==0.2.1",
    "PyDrive",
]

[tool.setuptools.packages.find]
where = ["src"]
packages = ["pss-fleet-data-client"]