[project]
name = "pss-fleet-data-client"
version = "0.3.0"
license = {file = "LICENSE"}
description = "A client for the Pixel Starships Fleet Data API."
authors = [
    {name = "The worst.", email = "theworstpss@gmail.com"}
]
dependencies = [
    "httpx>=0.27.0",
    "pssapi>=0.5.1",
    "pydantic>=2.8.2",
    "python-dateutil>=2.9.0.post0",
]
readme = "README.md"
requires-python = ">= 3.11.7"

[tool.rye]
managed = true
dev-dependencies = [
    "autoflake>=2.3.1",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "flake8-black>=0.3.6",
    "flake8-bugbear>=24.4.26",
    "isort>=5.13.2",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.23.7",
    "pytest-env>=1.1.3",
    "pytest_httpx>=0.30.0",
    "pytest-vcr>=1.0.2",
    "vulture>=2.11",
]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
recursive = true

[tool.black]
line-length = 150
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
src_paths = ["src"]
profile = "black"
line_length = 150
lines_after_imports = 2

[tool.vulture]
min_confidence = 100
paths = ["./src/pss_fleet_data"]
sort_by_size = true
